2021-09-17  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Adding output for Prometheus

2021-09-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (critical): Applied a patch to fix the output of multiple errors
	* check_ssl_cert (main): Automatically assume localhost if --file is specified

2021-09-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (usage): Added an option to ignore OCSP server errors
	* check_ssl_cert (check_ocsp): Fixed the detection of an internal error

2021-09-02  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (hours_until): computes the date with dconv if date -f is missing

2021-09-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): detects old BSD date without -f

2021-08-31  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): added -crlf to the connection for the renegotiation test

2021-08-27  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): skipping the CN check on IP addresses

2021-08-26  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): small improvement in the verbose output of SSL Labs

2021-08-25  Matteo Corti  <matteo@corti.li>

	* README.md: Info about quoting *

2021-08-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (parse_command_line_options): do not delete COMMON_NAME by --file

2021-08-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (parse_command_line_options): Fixed the debugging output by the command line arguments splitting

2021-08-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Support DANE TLSA 312

2021-08-13  Matteo Corti  <matteo@corti.li>

	* test/unit_tests.sh (testMultipleAltNamesOK): Added a test for multiple --cn and OK status
	* check_ssl_cert (parse_command_line_options): Fixed the -n option (the old value was ovewritten each time)
	* check_ssl_cert (main): Better validation of the host command line argument

2021-07-09  Matteo Corti  <matteo@corti.li>
