@@ -2,5 +2,5 @@ check_ssl_cert-**
 **~
 **.crt
 **.error
-#**
+\#**
 .#**
